Fixed a bug of overflow and font-size

--- a/style.css
+++ b/style.css
@@ -11,13 +11,18 @@ h1{
     font-family: 'Oswald', sans-serif;
 }
 
+.wrapper{
+    width: 90%;
+    max-width: 750px;
+    margin: 0 auto;
+}
 
 .row1{
     background-color: rgba(255, 255, 255, 0.8);
     display: flex;
-    width: 90%;
+    /* width: 90%;
     max-width: 750px;
-    margin: 0 auto;
+    margin: 0 auto; */
     padding: 1.5em 1.5em;;
     justify-content: space-between;
     position: relative;
@@ -27,9 +32,9 @@ h1{
     background-color: rgba(255, 255, 255, 0.8);
     font-family: 'Cabin', sans-serif;    
     display: flex;
-    width: 90%;
+    /* width: 90%;
     max-width: 750px;
-    margin: 0 auto;
+    margin: 0 auto; */
     padding: 0.5em 1.5em;;
     justify-content:flex-start;
     vertical-align: middle;
@@ -41,23 +46,35 @@ h1{
 
 .row2{
     background-color: rgba(255, 255, 255, 0.8);
-    width: 90%;
+    /* width: 90%;
     max-width: 750px;
-    margin: 0 auto;
+    margin: 0 auto; */
     padding: 1.5em 1.5em;;
     font-family: 'Cabin', sans-serif;
 }
 
 .row3{
     background-color: rgba(255, 255, 255, 0.8);
-    width: 90%;
     display: flex;
+    /* width: 90%;
+    
     max-width: 750px;
-    margin: 0 auto;
+    margin: 0 auto; */
     padding: 1.5em 1.5em;
     font-family: 'Ubuntu Mono', monospace;
     font-size: 1em;
-    border: 1px solid black;
+    border-top: 1px solid black;
+}
+
+.row3-1, .row3-2, .row3-3, .row3-4{
+    width: 30%;
+}
+
+@media(max-width : 460px)
+{
+    .row3{
+        font-size: 0.8em;
+    }
 }
 
 .icon{
@@ -118,9 +135,6 @@ h1{
     background-color: #0A2E81;
 }
 
-.row3-1, .row3-2, .row3-3, .row3-4{
-    width: 30%;
-}
 
 .icon-arrow::before{
     content: "Regenerate";
